--- a/src/components/LeftPanel/LeftPanel.css
+++ b/src/components/LeftPanel/LeftPanel.css
@@ -4,5 +4,6 @@
   align-items: flex-start;
   gap: 32px;
   width: 33%;
-  height: 100%;
+  height: 100%
+  /* max-height: 100vh; */
 }
